--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,29 @@
 apply plugin: 'com.android.application'
+apply plugin: 'android-apt'
+
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        // replace with the current version of the Android plugin
+        classpath 'com.android.tools.build:gradle:1.3.1'
+        // Since Android's Gradle plugin 0.11, you have to use android-apt >= 1.3
+        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.4+'
+    }
+}
+
+repositories {
+    mavenCentral()
+    mavenLocal()
+}
 
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.0"
 
     defaultConfig {
-        applicationId "g9.cs619_2015_project2.cs.unh.edu.g9_cs1097_aecook1"
+        applicationId "edu.unh.cs.cs619_2015_project2.g9"
         minSdkVersion 15
         targetSdkVersion 23
         versionCode 1
@@ -17,6 +35,19 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/ASL2.0'
+    }
+    sourceSets {
+        main.java.srcDirs += 'src/main/java/edu/unh/cs/cs619_2015_project2/g9>'
+    }
 }
 
 dependencies {
@@ -24,4 +55,16 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.1.0'
     compile 'com.android.support:design:23.1.0'
+
+    apt 'org.androidannotations:androidannotations:3.1'
+    compile 'org.androidannotations:androidannotations-api:3.1'
+    compile 'org.springframework.android:spring-android-rest-template:1.0.1.RELEASE'
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.3.2'
+    compile 'com.squareup:otto:1.3.5'
+}
+
+apt {
+    arguments {
+        androidManifestFile variant.outputs[0].processResources.manifestFile
+    }
 }
