fixed project structure

--- a/g9_cs1097_aecook1/.gitignore
+++ b/g9_cs1097_aecook1/.gitignore
@@ -25,3 +25,12 @@ proguard/
 
 # Log Files
 *.log
+
+# Intellij Excludes
+/.idea/workspace.xml
+/.idea/libraries
+.DS_Store
+/captures
+
+.svnignore
+.svn/
