--- a/g9_cs1097_aecook1/app/build.gradle
+++ b/g9_cs1097_aecook1/app/build.gradle
@@ -61,6 +61,7 @@ dependencies {
     compile 'org.springframework.android:spring-android-rest-template:1.0.1.RELEASE'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.3.2'
     compile 'com.squareup:otto:1.3.5'
+    compile 'de.greenrobot:eventbus:2.4.0'
 }
 
 apt {
