--- a/g9_cs1097_aecook1/app/src/main/AndroidManifest.xml
+++ b/g9_cs1097_aecook1/app/src/main/AndroidManifest.xml
@@ -13,7 +13,10 @@
         <activity
             android:name=".TankClientActivity_"
             android:label="@string/title_activity_main"
-            android:theme="@style/AppTheme.NoActionBar" >
+            android:theme="@style/AppTheme.NoActionBar"
+            android:screenOrientation="landscape"
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
