trying to replay

--- a/g9_cs1097_aecook1/app/src/main/AndroidManifest.xml
+++ b/g9_cs1097_aecook1/app/src/main/AndroidManifest.xml
@@ -16,19 +16,22 @@
             android:label="@string/title_activity_main"
             android:screenOrientation="landscape"
             android:theme="@style/AppTheme.NoActionBar" >
-
         </activity>
         <activity
             android:name=".HomeScreen"
             android:label="@string/title_activity_home_screen"
-            android:theme="@style/AppTheme.NoActionBar"
             android:screenOrientation="landscape"
-            >
+            android:theme="@style/AppTheme.NoActionBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".ReplayActivity"
+            android:label="@string/title_activity_replay"
+            android:theme="@style/AppTheme.NoActionBar" >
         </activity>
     </application>
 
