--- a/g9_cs1097_aecook1/app/src/main/AndroidManifest.xml
+++ b/g9_cs1097_aecook1/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="edu.unh.cs.cs619_2015_project2.g9" >
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
